update nodes
